# fastapi-crud

./: Makefile  README.md  docker-compose.yml
src/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: crud.py  notes.py
src/tests/: conftest.py  test_notes.py
